--- a/examples/pay_and_login.html
+++ b/examples/pay_and_login.html
@@ -156,6 +156,17 @@ Jose.crypto.subtle.digest({name: "SHA-256"}, arrayFromString(js_pub_key["n"])).t
 	var Base58_character = "123456789ABCDEFGHJKLMNPQRSTUVWXYZabcdefghijkmnopqrstuvwxyz";
 	var encoded_in_b58 = to_b58(new Uint8Array(hashfromarray), Base58_character);
 	console.log(encoded_in_b58);
+	Jose.crypto.subtle.digest({name: "SHA-256"}, new Uint8Array(hashfromarray)).then(function(double_hashfromarray) {
+		console.log("double hash of public key array converted from string");
+		console.log(js_pub_key["n"])
+		console.log(new Uint8Array(double_hashfromarray));
+		console.log("double hash b58 encoding");
+		var Base58_character = "123456789ABCDEFGHJKLMNPQRSTUVWXYZabcdefghijkmnopqrstuvwxyz";
+		var double_encoded_in_b58 = to_b58(new Uint8Array(double_hashfromarray), Base58_character);
+		console.log(double_encoded_in_b58);
+  	});
+
+
   });
 
 encrypter.encrypt(to_encrypt_in_string).then(function(result) {
