--- a/examples/pay_and_login.html
+++ b/examples/pay_and_login.html
@@ -79,9 +79,6 @@
                 true, ['verify']);
         };
         var encrypter = new JoseJWE.Encrypter(cryptographer, public_rsa_key);
-        var to_server_payload = { "client_key": js_pub_key, "signature": "" };
-        to_encrypt_in_string = JSON.stringify(to_server_payload)
-        console.log(to_encrypt_in_string);
         function to_b58(B, A) {
             var d = [],   //the array for storing the stream of base58 digits
                 s = "",   //the result string variable that will be returned
@@ -179,59 +176,66 @@
                 var Base58_character = "123456789ABCDEFGHJKLMNPQRSTUVWXYZabcdefghijkmnopqrstuvwxyz";
                 var double_encoded_in_b58 = to_b58(new Uint8Array(double_hashfromarray), Base58_character);
                 console.log(double_encoded_in_b58);
+                var cryptographer_sign = new Jose.WebCryptographer();
+                cryptographer_sign.setContentSignAlgorithm("RS256");
+
+                var signer = new JoseJWS.Signer(cryptographer_sign);
+                signer.addSigner(privjwk_client).then(function () {
+                    signer
+                        .sign(double_encoded_in_b58, null, {})
+                        .then(function (message) {
+                            signature_in_json = JSON.stringify(message);
+                            console.log("signature");
+                            console.log(signature_in_json);
+                            var to_server_payload = { "client_key": js_pub_key, "signature": signature_in_json};
+                            to_encrypt_in_string = JSON.stringify(to_server_payload)
+                            console.log(to_encrypt_in_string);
+                            encrypter.encrypt(to_encrypt_in_string).then(function (result) {
+                                console.log(result);
+                                plaintext.textContent = to_encrypt_in_string
+                                ciphertext.textContent = result;
+                                const url = 'http://127.0.0.1:8080/?' + "code=" + result;
+                                var xmlhttp = new XMLHttpRequest();
+                                xmlhttp.onreadystatechange = function () {
+                                    console.log("result")
+                                    console.log(xmlhttp.responseText);
+                                    var decrypter = new JoseJWE.Decrypter(cryptographer, private_rsa_key);
+                                    decrypter.decrypt(xmlhttp.responseText)
+                                        .then(function (decrypted_plain_text) {
+                                            console.log(decrypted_plain_text)
+                                            decrypttext.textContent = decrypted_plain_text
+                                            message = JSON.parse(decrypted_plain_text)
+                                            var verifier = new JoseJWS.Verifier(cryptographer, message);
+                                            verifier.addRecipient(pubjwk, pubjwk["kid"], "RS256").then(function () {
+                                                console.log("add ok");
+                                                verifier.verify().then(function (result) {
+                                                    console.log("verifiend");
+                                                    result.filter(function (value) {
+                                                        console.log(JSON.stringify(value));
+                                                        decrypttext.textContent = JSON.stringify(value)
+                                                    }).length == 0;
+                                                });
+                                            });
+                                        }).catch(function (err) {
+                                            error.textContent = err;
+                                        });
+
+                                }
+                                xmlhttp.open("GET", url, false);
+                                xmlhttp.send();
+
+                            }).catch(function (err) {
+                                error.textContent = err;
+                            });
+                        })
+                        .catch(function (err) {
+                            console.error(err);
+                        });
+                });
             });
         });
-        var cryptographer_sign = new Jose.WebCryptographer();
-        cryptographer_sign.setContentSignAlgorithm("RS256");
 
-        var signer = new JoseJWS.Signer(cryptographer_sign);
-        signer.addSigner(privjwk_client).then(function () {
-            signer
-                .sign("hello world", null, {})
-                .then(function (message) {
-                    console.log(message);
-                })
-                .catch(function (err) {
-                    console.error(err);
-                });
-        });
-        encrypter.encrypt(to_encrypt_in_string).then(function (result) {
-            console.log(result);
-            plaintext.textContent = to_encrypt_in_string
-            ciphertext.textContent = result;
-            const url = 'http://127.0.0.1:8080/?' + "code=" + result;
-            var xmlhttp = new XMLHttpRequest();
-            xmlhttp.onreadystatechange = function () {
-                console.log("result")
-                console.log(xmlhttp.responseText);
-                var decrypter = new JoseJWE.Decrypter(cryptographer, private_rsa_key);
-                decrypter.decrypt(xmlhttp.responseText)
-                    .then(function (decrypted_plain_text) {
-                        console.log(decrypted_plain_text)
-                        decrypttext.textContent = decrypted_plain_text
-                        message = JSON.parse(decrypted_plain_text)
-                        var verifier = new JoseJWS.Verifier(cryptographer, message);
-                        verifier.addRecipient(pubjwk, pubjwk["kid"], "RS256").then(function () {
-                            console.log("add ok");
-                            verifier.verify().then(function (result) {
-                                console.log("verifiend");
-                                result.filter(function (value) {
-                                    console.log(JSON.stringify(value));
-                                    decrypttext.textContent = JSON.stringify(value)
-                                }).length == 0;
-                            });
-                        });
-                    }).catch(function (err) {
-                        error.textContent = err;
-                    });
 
-            }
-            xmlhttp.open("GET", url, false);
-            xmlhttp.send();
-
-        }).catch(function (err) {
-            error.textContent = err;
-        });
     </script>
 </body>
 
